SEO: Alt for images

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<!-- Uncomment below if you prefer to use an image logo -->
 					<a href="index.html" class="logo mr-auto"><img
 							src="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png"
-							alt="">
+							alt="Dr. Ayurvedic Sexologist">
 						<span style="color: black;">Dr. Ayurveda </span><span>Sexologist</span>
 					</a>
 
@@ -436,7 +436,7 @@
 						<div class="member" data-aos="fade-up" data-aos-delay="100">
 							<div class="member-img">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631650911/drayurveda/dr-murshid_gpchmj.jpg"
-									class="img-fluid" alt="">
+									class="img-fluid" alt="Dr. Murshid 1">
 							</div>
 							<div class="member-info">
 								<h4>Dr Murshid K.V.</h4>
@@ -512,7 +512,7 @@
 						<div class="member" data-aos="fade-up" data-aos-delay="200">
 							<div class="member-img">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651573/drayurveda/dr-greeshma-das-4_pfbns3.jpg"
-									class="img-fluid" alt="" style="margin-top: -16px;">
+									class="img-fluid" alt="Greeshma Das 4" style="margin-top: -16px;">
 							</div>
 							<div class="member-info">
 								<h4>Dr. Greeshma Das S</h4>
@@ -581,7 +581,7 @@
 						<div class="member" data-aos="fade-up" data-aos-delay="200">
 							<div class="member-img">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-1_kmygws.jpg"
-									class="img-fluid" alt="" style="margin-top: -16px;">
+									class="img-fluid" alt="Dr. Akshayanand 1" style="margin-top: -16px;">
 							</div>
 							<div class="member-info">
 								<h4>Dr. Akshayanand Vashisht</h4>
@@ -610,7 +610,7 @@
 						<div class="member" data-aos="fade-up" data-aos-delay="100">
 							<div class="member-img">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-3_pzxhjy.jpg"
-									class="img-fluid" alt="">
+									class="img-fluid" alt="Miss Mona 1">
 							</div>
 							<div class="member-info">
 								<h4>Mrs. Mona Kumari</h4>
@@ -626,7 +626,7 @@
 						<div class="member" data-aos="fade-up" data-aos-delay="200">
 							<div class="member-img">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/maya-one_kwlmx6.jpg"
-									class="img-fluid" alt="" style="margin-top: -16px;">
+									class="img-fluid" alt="Mrs Maya 1" style="margin-top: -16px;">
 							</div>
 							<div class="member-info">
 								<h4>Mrs. Maya</h4>
@@ -701,7 +701,7 @@
 							<div class="col-lg-6 order-1 order-lg-2 text-center" data-aos="fade-up"
 								data-aos-delay="200">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1630596351/drayurveda/img11_kg58xe.jpg"
-									alt="" class="img-fluid">
+									alt="Erectile Dysfunction" class="img-fluid">
 							</div>
 						</div>
 					</div>
@@ -734,7 +734,7 @@
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632006028/drayurveda/pse_tx3twn.jpg"
-									alt="" class="img-fluid">
+									alt="Premature ejaculation" class="img-fluid">
 							</div>
 						</div>
 					</div>
@@ -759,7 +759,7 @@
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/low-se-desire_olq1om.jpg"
-									alt="" class="img-fluid">
+									alt="Penis Size" class="img-fluid">
 							</div>
 						</div>
 					</div>
@@ -785,7 +785,7 @@
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center">
 								<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005574/drayurveda/oligospermia-male_zoyudb.jpg"
-									alt="" class="img-fluid">
+									alt="Oligospermia" class="img-fluid">
 							</div>
 						</div>
 					</div>
@@ -891,7 +891,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651778/drayurveda/dr-murshid-3_me6lqq.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Dr. Murshid 3">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
@@ -908,7 +908,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651772/drayurveda/dr-murshid-2_cif4gi.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Dr. Murshid 2">
 							<div class="portfolio-info">
 								<!-- <h4>Web 3</h4>
 								<p>Web</p> -->
@@ -925,7 +925,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651563/drayurveda/dr-greeshma-das-1_mwyozv.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Dr. Greeshma 1">
 							<div class="portfolio-info">
 								<!-- <h4>Web 2</h4>
 								<p>Web</p> -->
@@ -942,7 +942,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-1_vj3zay.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Gallery 1">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
@@ -959,7 +959,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-2_hklcoa.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Gallery 2">
 							<div class="portfolio-info">
 								<!-- <h4>Web 3</h4>
 								<p>Web</p> -->
@@ -976,7 +976,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-3_tnrwaj.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Gallery 3">
 							<div class="portfolio-info">
 								<!-- <h4>Web 2</h4>
 								<p>Web</p> -->
@@ -993,7 +993,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-7_ncfl9k.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Gallery 7">
 							<div class="portfolio-info">
 								<!-- <h4>Web 3</h4>
 								<p>Web</p> -->
@@ -1010,7 +1010,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005550/drayurveda/gallery-6_pkuj6v.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Gallery 6">
 							<div class="portfolio-info">
 								<!-- <h4>Web 3</h4>
 								<p>Web</p> -->
@@ -1027,7 +1027,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005551/drayurveda/gallery-10_fnvkuf.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Gallery 10">
 							<div class="portfolio-info">
 								<!-- <h4>Web 2</h4>
 								<p>Web</p> -->
@@ -1080,7 +1080,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-1_e1vnqw.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Mona One">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
@@ -1097,7 +1097,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/maya-two_ph5ebi.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Maya Two">
 							<div class="portfolio-info">
 								<!-- <h4>Web 2</h4>
 								<p>Web</p> -->
@@ -1114,7 +1114,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1632005573/drayurveda/mona-2_dorstc.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Mona Two">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
@@ -1131,7 +1131,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-2_cxdrvf.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Akshayanand Two">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
@@ -1148,7 +1148,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-3_kdz72o.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Akshayanand Three">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
@@ -1165,7 +1165,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1633202993/drayurveda/akshayanand-4_stwvry.jpg"
-								class="img-fluid" alt="">
+								class="img-fluid" alt="Akshayanand 4">
 							<div class="portfolio-info">
 								<!-- <h4>App 1</h4>
 								<p>App</p> -->
