SEO: Meta description

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 	<title>#1 Sexologist | Ayurvedic Sexologist | Top Sexologist in India</title>
 	<meta
-		content="India's most trusted Sexologist, Ayurvedic Sexologist for treatment of Erectile Dysfunction, Premature Ejaculation, Nightfall and Penis Enlargement. Best sex doctor."
+		content="India's most trusted Sexologist, Ayurvedic Sexologist for treatment of Erectile Dysfunction, Premature Ejaculation, Nightfall and Penis Enlargement. Sex doctor."
 		name="description">
 	<meta
-		content="India's most trusted Sexologist, Ayurvedic Sexologist for treatment of Erectile Dysfunction, Premature Ejaculation, Nightfall and Penis Enlargement. Best sex doctor."
+		content="India's most trusted Sexologist, Ayurvedic Sexologist for treatment of Erectile Dysfunction, Premature Ejaculation, Nightfall and Penis Enlargement. Sex doctor."
 		name="keywords">
 
 	<meta name="keywords"
