--- a/index.html
+++ b/index.html
@@ -1561,24 +1561,26 @@
 		<div class="footer-top">
 			<div class="container">
 				<div class="row">
-					&copy; Copyright &nbsp; <strong><span>Dr. Ayurveda Sexologist</span></strong>. All Rights Reserved
+					<div class="col-6">
+						&copy; Copyright &nbsp; <strong><span>Dr. Ayurveda Sexologist</span></strong>. All Rights Reserved
+					</div>
+					<div class="col-6" style="text-align: right;">
+						<div class="social-links text-center text-md-right">
+							<a href="https://twitter.com/DrAyurvedicSex1" class="twitter"><i class="bx bxl-twitter"></i></a>
+							<a href="https://www.facebook.com/profile.php?id=100074102310669" class="facebook"><i class="bx bxl-facebook"></i></a>
+							<a href="https://www.instagram.com/drayurvedicsexologist" class="instagram"><i class="bx bxl-instagram"></i></a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 
-		<!-- <div class="footer-bottom">
+		<div class="footer-bottom">
 			<div class="container">
 				<div class="row">
-					<div class="social-links text-center text-md-right pt-3 pt-md-0">
-						<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-						<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-						<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-						<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-						<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 	</footer><!-- End Footer -->
 
 	<!-- <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a> -->
