--- a/index.html
+++ b/index.html
@@ -1566,9 +1566,9 @@
 					</div>
 					<div class="col-6" style="text-align: right;">
 						<div class="social-links text-center text-md-right">
-							<a href="https://twitter.com/DrAyurvedicSex1" class="twitter"><i class="bx bxl-twitter"></i></a>
-							<a href="https://www.facebook.com/profile.php?id=100074102310669" class="facebook"><i class="bx bxl-facebook"></i></a>
-							<a href="https://www.instagram.com/drayurvedicsexologist" class="instagram"><i class="bx bxl-instagram"></i></a>
+							<a href="https://twitter.com/DrAyurvedicSex1" target="_" class="twitter"><i class="bx bxl-twitter"></i></a>
+							<a href="https://www.facebook.com/profile.php?id=100074102310669" target="_" class="facebook"><i class="bx bxl-facebook"></i></a>
+							<a href="https://www.instagram.com/drayurvedicsexologist" target="_" class="instagram"><i class="bx bxl-instagram"></i></a>
 						</div>
 					</div>
 				</div>
