--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>#1 Sexologist | Ayurvedic Sexologist | Top Sexologist in India</title>
+	<title>#1 Sex Doctor | Ayurvedic Sexologist | Sexual Problem Treatment</title>
 	<meta
 		content="India's most trusted Sexologist, Ayurvedic Sexologist for treatment of Erectile Dysfunction, Premature Ejaculation, Nightfall and Penis Enlargement. Sex doctor."
 		name="description">
