--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@
 								<div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
 									<i class="bx bx-cube-alt"></i>
 									<h4>Premature Ejaculation</h4>
-									<p>Premature Ejaculation is a condition in Men where ejaculation occurs earlier than
+									<p>PE is a condition in Men where ejaculation occurs earlier than
 										normal. This can occur at any age.
-										Premature Ejaculation is traumatic condition because the cause is not physical
+										PE is traumatic condition because the cause is not physical
 										but mental.
 									</p>
 								</div>
@@ -445,7 +445,7 @@
 									from Sri Sai Ram Ayurveda Medical College, Tamil Nadu.
 									<br><br>
 									He has 10 years of experience in treating male disorder like <b>Erectile
-										Dysfunction, Premature Ejaculation and Low Libido</b> in men.
+										Dysfunction, Premature Ejaculation and Low Sexual Desire</b> in men.
 								</p>
 								<h4 style="color: #3b2db9">Experience</h4>
 							</div>
@@ -691,9 +691,8 @@
 										Many men fail in achieving an erection whilst others do not get a firm
 										erection for sufficient penetration. Even some men lose their erection soon.
 									</li>
-									<li><i class="ri-check-double-line"></i>Erectile Dysfunction (ED) is also called as
-										impotence that is usually temporary and doesn’t need medical treatment. But
-										if the problem persists, it can affect your life and self-esteem.
+									<li><i class="ri-check-double-line"></i>ED is also called as
+										impotence that is usually temporary and doesn’t need medical treatment. A sex doctor can help you get rid of this potentially serious disease.
 									</li>
 									<li><a href="erectile-dysfunction.html" target="_">Read More ...</a></li>
 								</ul>
@@ -712,7 +711,7 @@
 									orgasm and releases (ejaculates)
 									semen sooner than he or his partner would like.</h3>
 								<p class="font-italic">
-									Physical, chemical and emotional/psychological factors cause premature ejaculation.
+									Physical, chemical and emotional/psychological factors cause PE, which an Ayurvedic Doctor can help to cure.
 
 									Physical and chemical problems include:
 
@@ -750,7 +749,7 @@
 										treatments have harmful side effects.</li>
 									<li><i class="ri-check-double-line"></i> Ayurveda is able to give you a complete
 										solution to this problem without any side effects. It is completely safe and
-										natural.
+										natural. Top sexologist in India, who are with us, can help you in this regard.
 									</li>
 									<li><a href="low-sexual-desire.html" target="_">Read More ...</a></li>
 								</ul>
@@ -1218,7 +1217,7 @@
 					<li>
 						<a data-toggle="collapse" href="#faq3" class="collapsed" style="color: #e03a3c">How long do I
 							have to take the medicine
-							for Erectile dysfunction and Premature Ejaculation?? <i
+							for ED and PE? <i
 								class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
 						<div id="faq3" class="collapse" data-parent=".faq-list">
 							<p>
@@ -1314,7 +1313,7 @@
 									<!-- <h4>Designer</h4> -->
 									<p>
 										<i class="bx bxs-quote-alt-left quote-icon-left"></i>
-										I have consulted them online for my husband who was facing Erectile dysfunction
+										I have consulted them online for my husband who was facing ED
 										and was worried about cure as some doctors asked for surgery. But to my
 										surprise, within one week of medicines, he has shown signs of improvement. It is
 										now 100% cured. I would want to thank them. Don’t hesitate to consult them. Tell
@@ -1333,7 +1332,7 @@
 									<p>
 										<i class="bx bxs-quote-alt-left quote-icon-left"></i>
 										Ami chikitsae puro labh payechi. Amar Janashona ekjon er theke el jaygar khobor
-										pai. Seo ekhon treatment kore bhalo ache
+										pai. Seo ekhon treatment kore bhalo ache.
 										<i class="bx bxs-quote-alt-right quote-icon-right"></i>
 									</p>
 								</div>
@@ -1348,7 +1347,7 @@
 									<p>
 										<i class="bx bxs-quote-alt-left quote-icon-left"></i>
 										I am very happy with the treatment. Excellent counselling done by them. I have
-										recovered a lot.
+										recovered a lot. Also, they do fulfill their motto: <b>Your partner needs better sex. So do you!</b>
 										<i class="bx bxs-quote-alt-right quote-icon-right"></i>
 									</p>
 								</div>
