--- a/index.html
+++ b/index.html
@@ -1568,6 +1568,8 @@
 							<a href="https://twitter.com/DrAyurvedicSex1" target="_" class="twitter"><i class="bx bxl-twitter"></i></a>
 							<a href="https://www.facebook.com/profile.php?id=100074102310669" target="_" class="facebook"><i class="bx bxl-facebook"></i></a>
 							<a href="https://www.instagram.com/drayurvedicsexologist" target="_" class="instagram"><i class="bx bxl-instagram"></i></a>
+							<a href="https://tumblr.com/followed/by/drayurvedicsexologist" target="_" class="tumblr"><i class="bx bxl-tumblr"></i></a>
+							<a href="https://pinterest.com/ayurvedichealthworld" target="_" class="pinterest"><i class="bx bxl-pinterest"></i></a>
 						</div>
 					</div>
 				</div>
