--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
 	<title>#1 Sex Doctor | Ayurvedic Sexologist | Sex Problem Treatment</title>
 	<meta
-		content="India's most trusted Sexologist, Ayurvedic Sexologist for treatment of Erectile Dysfunction, Premature Ejaculation, Nightfall and Penis Enlargement. Sex doctor."
+		content="SEXOLOGIST,BEST SEXOLOGIST,ERECTILE DYSFUNCTION,PREMATURE EJACULATION,AYURVEDIC SEXOLOGIST,SEXOLOGIST NEAR ME,MALE SEXOLOGIST,INDIA BEST SEXOLOGIST,SEXOLOGIST IN KOLKATA,FAMOUS SEXOLOGIST"
 		name="description">
 	<meta
-		content="India's most trusted Sexologist, Ayurvedic Sexologist for treatment of Erectile Dysfunction, Premature Ejaculation, Nightfall and Penis Enlargement. Sex doctor."
+		content="SEXOLOGIST,BEST SEXOLOGIST,ERECTILE DYSFUNCTION,PREMATURE EJACULATION,AYURVEDIC SEXOLOGIST,SEXOLOGIST NEAR ME,MALE SEXOLOGIST,INDIA BEST SEXOLOGIST,SEXOLOGIST IN KOLKATA,FAMOUS SEXOLOGIST"
 		name="keywords">
 
 	<meta name="keywords"
-		content="Ayurvedic Sex Clinic in India, Ayurvedic Sex Counsellor in India, Ayurvedic Sex doctor in India, Ayurvedic Sexologist Doctors For Male in India, Ayurvedic Sexologist in India, Ayurvedic Sexual Disorders Treatment in India, Ayurvedic Sexual Dysfunctions Treatment in India, Ayurvedic Sexual health Doctor in India, Ayurvedic Sexual Health Treatment in India, Best Ayurvedic Sex Clinic in India, Best Ayurvedic Sex doctor in India, Best Ayurvedic Sex health Clinic in India, Best Ayurvedic Sex specialist in India, Best Ayurvedic Sexologist Doctor in India, Best Ayurvedic Sexologist in India, Best Sex Clinic in India, Best Sex doctor in India, Best Sex health Clinic in India, Best Sex specialist in India, Best Sexologist Doctor in India, Best Sexologist in India, Erectile Dysfunction Ayurvedic Treatment in India, Erectile Dysfunction Treatment in India, Male infertility Ayurvedic Treatment in India, Male infertility Treatment in India, Premature Ejaculation Treatment in India, Ayurvedic Sex Health Specialist in India, Sex Clinic in India, Sex Counsellor in India, Sex doctor in India, Sex Health Specialist in India, Sexologist Doctors For Male in India, Sexologist in India, Sexual Disorders Treatment in India, Sexual Dysfunctions Treatment in India, Sexual health Ayurvedic Clinic in India, Sexual health Ayurvedic expert in India, Sexual health Clinic in India, Sexual health Doctor in India, Sexual health expert in India, Sexual Health Treatment in India, Top Ayurvedic Sex doctor in India, Top Ayurvedic Sexologist in India, Top Sex doctor in India, Top Sexologist in India">
+		content="sexologist in kolkata, sexologist near me, sexologist doctor, sexologist course, sexologist certification, famous sexologist, what does a sexologist do, best sexologist near me, gupt rog doctor near durgapur in west bengal, gupt rog doctor near asansol in west bengal, gupt rog doctor in gaya, gupt rog doctor near me, gupt rog doctor in jhansi, gupt rog doctor bikaner, gupt rog doctor rajkot, gupt rog doctor in ara, Best Sex doctor in India, Best Sex health Clinic in India, Best Sex specialist in India, Best Sexologist Doctor in India, Best Sexologist in India, Erectile Dysfunction Ayurvedic Treatment in India, Erectile Dysfunction Treatment in India, Male infertility Ayurvedic Treatment in India, Male infertility Treatment in India, Premature Ejaculation Treatment in India, Ayurvedic Sex Health Specialist in India, Sex Clinic in India, Sex Counsellor in India, Sex doctor in India, Sex Health Specialist in India, Sexologist Doctors For Male in India, Sexologist in India, Sexual Disorders Treatment in India, Sexual Dysfunctions Treatment in India, Sexual health Ayurvedic Clinic in India, Sexual health Ayurvedic expert in India, Sexual health Clinic in India, Sexual health Doctor in India, Sexual health expert in India, Sexual Health Treatment in India, Top Ayurvedic Sex doctor in India, Top Ayurvedic Sexologist in India, Top Sex doctor in India, Top Sexologist in India">
 
 	<!-- Favicons -->
 	<link href="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png" rel="icon">
@@ -692,7 +692,8 @@
 										erection for sufficient penetration. Even some men lose their erection soon.
 									</li>
 									<li><i class="ri-check-double-line"></i>ED is also called as
-										impotence that is usually temporary and doesn’t need medical treatment. A sex doctor can help you get rid of this potentially serious disease.
+										impotence that is usually temporary and doesn’t need medical treatment. A sex
+										doctor can help you get rid of this potentially serious disease.
 									</li>
 									<li><a href="erectile-dysfunction.html" target="_">Read More ...</a></li>
 								</ul>
@@ -711,7 +712,8 @@
 									orgasm and releases (ejaculates)
 									semen sooner than he or his partner would like.</h3>
 								<p class="font-italic">
-									Physical, chemical and emotional/psychological factors cause PE, which an Ayurvedic Doctor can help to cure.
+									Physical, chemical and emotional/psychological factors cause PE, which an Ayurvedic
+									Doctor can help to cure.
 
 									Physical and chemical problems include:
 
@@ -1217,8 +1219,8 @@
 					<li>
 						<a data-toggle="collapse" href="#faq3" class="collapsed" style="color: #e03a3c">How long do I
 							have to take the medicine
-							for ED and PE? <i
-								class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+							for ED and PE? <i class="bx bx-chevron-down icon-show"></i><i
+								class="bx bx-x icon-close"></i></a>
 						<div id="faq3" class="collapse" data-parent=".faq-list">
 							<p>
 								Most of our patients get results within 30-days of treatment. Depending on chronicity
@@ -1347,7 +1349,8 @@
 									<p>
 										<i class="bx bxs-quote-alt-left quote-icon-left"></i>
 										I am very happy with the treatment. Excellent counselling done by them. I have
-										recovered a lot. Also, they do fulfill their motto: <b>Your partner needs better sex. So do you!</b>
+										recovered a lot. Also, they do fulfill their motto: <b>Your partner needs better
+											sex. So do you!</b>
 										<i class="bx bxs-quote-alt-right quote-icon-right"></i>
 									</p>
 								</div>
@@ -1561,15 +1564,21 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-6">
-						&copy; Copyright &nbsp; <strong><span>Dr. Ayurveda Sexologist</span></strong>. All Rights Reserved
+						&copy; Copyright <strong><span>Dr. Ayurveda Sexologist</span></strong>. All Rights
+						Reserved
 					</div>
 					<div class="col-6" style="text-align: right;">
 						<div class="social-links text-center text-md-right">
-							<a href="https://twitter.com/DrAyurvedicSex1" target="_" class="twitter"><i class="bx bxl-twitter"></i></a>
-							<a href="https://www.facebook.com/profile.php?id=100074102310669" target="_" class="facebook"><i class="bx bxl-facebook"></i></a>
-							<a href="https://www.instagram.com/drayurvedicsexologist" target="_" class="instagram"><i class="bx bxl-instagram"></i></a>
-							<a href="https://tumblr.com/followed/by/drayurvedicsexologist" target="_" class="tumblr"><i class="bx bxl-tumblr"></i></a>
-							<a href="https://pinterest.com/ayurvedichealthworld" target="_" class="pinterest"><i class="bx bxl-pinterest"></i></a>
+							<a href="https://twitter.com/DrAyurvedicSex1" target="_" class="twitter"><i
+									class="bx bxl-twitter"></i></a>
+							<a href="https://www.facebook.com/profile.php?id=100074102310669" target="_"
+								class="facebook"><i class="bx bxl-facebook"></i></a>
+							<a href="https://www.instagram.com/drayurvedicsexologist" target="_" class="instagram"><i
+									class="bx bxl-instagram"></i></a>
+							<a href="https://tumblr.com/followed/by/drayurvedicsexologist" target="_" class="tumblr"><i
+									class="bx bxl-tumblr"></i></a>
+							<a href="https://pinterest.com/ayurvedichealthworld" target="_" class="pinterest"><i
+									class="bx bxl-pinterest"></i></a>
 						</div>
 					</div>
 				</div>
@@ -1579,6 +1588,23 @@
 		<div class="footer-bottom">
 			<div class="container">
 				<div class="row">
+					<div class="col-lg-12 col-md-12 footer-links">
+						<h4>Our Services</h4>
+						<ul>
+							<li>
+								Erectile Dysfunction
+							</li>
+							<li>
+								Premature Ejaculation
+							</li>
+							<li>
+								Low Sexual Desire
+							</li>
+							<li>
+								Oligospermia (Male Infertility)
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
