--- a/index.html
+++ b/index.html
@@ -41,25 +41,11 @@
 </head>
 
 <body>
-	<!-- <section id="topbar" class="d-none d-lg-flex align-items-center fixed-top topbar-transparent">
-		<div class="container-fluid text-right">
-			<div class="row justify-content-center">
-				<div class="col-xl-10">
-					<i class="icofont-phone"></i>
-					<a href="tel: +919907856800">
-						+91 9907856800
-					</a>
-				</div>
-			</div>
-		</div>
-	</section> -->
 	<!-- ======= Header ======= -->
 	<header id="header" class="fixed-top">
 		<div class="container-fluid">
 			<div class="row justify-content-center">
 				<div class="col-xl-10 d-flex align-items-center">
-					<!-- <h1 class="logo mr-auto"><a href="index.html">Dr. Ayurveda<span>.</span></a></h1> -->
-					<!-- Uncomment below if you prefer to use an image logo -->
 					<a href="index.html" class="logo mr-auto"><img
 							src="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png"
 							alt="Dr. Ayurvedic Sexologist">
@@ -69,10 +55,21 @@
 					<nav class="nav-menu d-none d-lg-block">
 						<ul>
 							<li class="active"><a href="#header">Home</a></li>
-							<li><a href="#about">About</a></li>
-							<!-- <li><a href="#sectionWhyUs">Why Us?</a></li> -->
+							<li class="drop-down"><a href="#about">About</a>
+								<ul>
+									<li><a href="sexologist-near-me.html" target="_">Sexologist near Me</a></li>
+									<li><a href="sexologist-in-jaipur.html" target="_">Sexologist in Jaipur</a></li>
+									<li><a href="sexologist-in-jharkhand.html" target="_">Sexologist in Jharkhand</a></li>
+									<li><a href="sexologist-in-ranchi.html" target="_">Sexologist in Ranchi</a></li>
+									<li><a href="sexologist-in-west-bengal.html" target="_">Sexologist in West Bengal</a></li>
+									<li><a href="sexologist-in-kolkata.html" target="_">Sexologist in Kolkata</a></li>
+									<li><a href="sexologist-in-faridabad.html" target="_">Sexologist in Faridabad</a></li>
+									<li><a href="erectile-dysfunction-treatment.html" target="_">Erectile Dysfunction Treatment</a></li>
+									<li><a href="nightfall-medicine.html" target="_">Nightfall Medicine</a></li>
+									<li><a href="profile-drayurvedic-sexologist.html" target="_">Profile: Dr. Ayurvedic Sexologist</a></li>
+								</ul>
+							</li>
 							<li><a href="#sectionTeam">Team</a></li>
-							<!-- <li><a href="#sectionMajorProblem">Major Problems</a></li> -->
 							<li><a href="#sectionGallery">Gallery</a></li>
 							<li><a href="#sectionFAQ">FAQ</a></li>
 							<li><a href="#sectionTestimonials">Testimonials</a></li>
@@ -281,46 +278,10 @@
 		</div>
 	</section><!-- End Hero -->
 
-	<!-- ======= Hero Section ======= 
-	<section id="hero" class="d-flex align-items-center">
-
-		<div class="container-fluid" data-aos="zoom-out" data-aos-delay="100">
-			<div class="row justify-content-center">
-				<div class="col-xl-10">
-					<div class="row">
-						<div class="col-xl-5">
-							<h1>Save Your Relationship Before It’s Too Late</h1>
-							<h2>And the good thing is that we can help you with that!</h2>
-							<a href="#sectionContactUs" class="btn-get-started scrollto">Contact Us</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-	</section><!-- End Hero -->
-
 	<main id="main">
-
-		<!-- ======= Clients Section ======= 
-		<section id="clients" class="clients">
-			<div class="container-fluid" data-aos="zoom-in">
-				<div class="row justify-content-center">
-					<div class="col-xl-10">
-						<div class="owl-carousel clients-carousel">
-							<img
-								src="https://res.cloudinary.com/suvishakha/image/upload/v1630851476/drayurveda/5f58792b942d1b001ce3c0be_q4g4vg.jpg"
-								alt="">
-						</div>
-					</div>
-				</div>
-			</div>
-		</section><!-- End Clients Section -->
-
 		<!-- ======= About Section ======= -->
 		<section id="about" class="about section-bg">
 			<div class="container" data-aos="fade-up">
-
 				<div class="row no-gutters">
 					<div class="content col-xl-5 d-flex align-items-stretch">
 						<div class="content">
