--- a/low-sexual-desire.html
+++ b/low-sexual-desire.html
@@ -55,7 +55,20 @@
 					<nav class="nav-menu d-none d-lg-block">
 						<ul>
 							<li class="active"><a href="#header">Home</a></li>
-							<li><a href="#about">About</a></li>
+							<li class="drop-down"><a href="#about">About</a>
+								<ul>
+									<li><a href="sexologist-near-me.html" target="_">Sexologist near Me</a></li>
+									<li><a href="sexologist-in-jaipur.html" target="_">Sexologist in Jaipur</a></li>
+									<li><a href="sexologist-in-jharkhand.html" target="_">Sexologist in Jharkhand</a></li>
+									<li><a href="sexologist-in-ranchi.html" target="_">Sexologist in Ranchi</a></li>
+									<li><a href="sexologist-in-west-bengal.html" target="_">Sexologist in West Bengal</a></li>
+									<li><a href="sexologist-in-kolkata.html" target="_">Sexologist in Kolkata</a></li>
+									<li><a href="sexologist-in-faridabad.html" target="_">Sexologist in Faridabad</a></li>
+									<li><a href="erectile-dysfunction-treatment.html" target="_">Erectile Dysfunction Treatment</a></li>
+									<li><a href="nightfall-medicine.html" target="_">Nightfall Medicine</a></li>
+									<li><a href="profile-drayurvedic-sexologist.html" target="_">Profile: Dr. Ayurvedic Sexologist</a></li>
+								</ul>
+							</li>
 							<!-- <li><a href="#sectionWhyUs">Why Us?</a></li> -->
 							<li><a href="#sectionTeam">Team</a></li>
 							<!-- <li><a href="#sectionMajorProblem">Major Problems</a></li> -->
