--- a/low-sexual-desire.html
+++ b/low-sexual-desire.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>Dr. Ayurveda Sexologist</title>
+	<title>Dr. Ayurvedic Sexologist</title>
 	<meta
 		content="24 ×7 TOP AYURVEDIC SEXOLOGIST IN INDIA, TOP AYURVEDIC SEXOLOGIST FOR PREMATURE EJACULATION, ERECTILE DYSFUNCTION, LOW SEXUAL DESIRE, OLIGOSPERMIA"
 		name="description">
@@ -49,7 +49,7 @@
 					<a href="index.html" class="logo mr-auto"><img
 							src="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png"
 							alt="">
-						<span style="color: black;">Dr. Ayurveda </span><span>Sexologist</span>
+						<span style="color: black;">Dr. Ayurvedic </span><span>Sexologist</span>
 					</a>
 
 					<nav class="nav-menu d-none d-lg-block">
@@ -192,7 +192,7 @@
 		<div class="footer-top">
 			<div class="container">
 				<div class="row">
-					&copy; Copyright &nbsp; <strong><span>Dr. Ayurveda Sexologist</span></strong>. All Rights Reserved
+					&copy; Copyright &nbsp; <strong><span>Dr. Ayurvedic Sexologist</span></strong>. All Rights Reserved
 				</div>
 			</div>
 		</div>
