--- a/sexologist-in-jaipur.html
+++ b/sexologist-in-jaipur.html
@@ -49,7 +49,7 @@
 					<a href="index.html" class="logo mr-auto"><img
 							src="https://res.cloudinary.com/suvishakha/image/upload/v1632222297/drayurveda/logo_xio8kf.png"
 							alt="">
-						<span style="color: black;">Dr. Ayurveda </span><span>Sexologist</span>
+						<span style="color: black;">Dr. Ayurvedic </span><span>Sexologist</span>
 					</a>
 
 					<nav class="nav-menu d-none d-lg-block">
@@ -182,13 +182,13 @@
 										SEXOLOGIST DOCTOR
 									</strong>
 
-									<p>
-										DR AYURVEDIC SEXOLOGIST is best Ayurvedic Sexologist in JAIPUR.He is famous as
-										Sexologist for Erectile dysfunction , Sexologist for Premature Ejaculation,
-										Sexologist for Nightfall treatment, Sex doctor online consultation, best sexologist
-										near me,Sexologist for Penis Enlargement,Best Sexologist for male Sexual
-										problems,Best Sexologist for Male Infertility.
-									</p>
+								<p>
+									DR AYURVEDIC SEXOLOGIST is best Ayurvedic Sexologist in JAIPUR.He is famous as
+									Sexologist for Erectile dysfunction , Sexologist for Premature Ejaculation,
+									Sexologist for Nightfall treatment, Sex doctor online consultation, best sexologist
+									near me,Sexologist for Penis Enlargement,Best Sexologist for male Sexual
+									problems,Best Sexologist for Male Infertility.
+								</p>
 								</p>
 							</div>
 						</article>
@@ -203,7 +203,7 @@
 		<div class="footer-top">
 			<div class="container">
 				<div class="row">
-					&copy; Copyright &nbsp; <strong><span>Dr. Ayurveda Sexologist</span></strong>. All Rights Reserved
+					&copy; Copyright &nbsp; <strong><span>Dr. Ayurvedic Sexologist</span></strong>. All Rights Reserved
 				</div>
 			</div>
 		</div>
